--- a/app/src/main/res/layout/activity_display_custom_camera_view.xml
+++ b/app/src/main/res/layout/activity_display_custom_camera_view.xml
@@ -17,16 +17,10 @@
 
     </FrameLayout>
 
-    <SurfaceView
-        android:id="@+id/surface_view_preview"
+    <TextureView
+        android:id="@+id/textureViewPreview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="40dp"
+        android:onClick="takePicture2"
         android:text="@string/button_image_capture2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/video_button2"
@@ -51,4 +46,5 @@
         android:text="@string/button_video_capture2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
