--- a/app/src/main/res/layout/activity_display_custom_camera_view.xml
+++ b/app/src/main/res/layout/activity_display_custom_camera_view.xml
@@ -26,25 +26,49 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/snapshot_button2"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="40dp"
-        android:onClick="takePicture2"
-        android:text="@string/button_image_capture2"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/video_button2"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/snapshot_button2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="takePicture2"
+            android:text="@string/button_image_capture" />
+
+        <Button
+            android:id="@+id/video_button2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/button_video_capture" />
+    </LinearLayout>
 
     <Button
-        android:id="@+id/video_button2"
-        android:layout_width="wrap_content"
+        android:id="@+id/dismiss_button"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="84dp"
-        android:text="@string/button_video_capture2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:onClick="cancelPicture"
+        android:text="@android:string/cancel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:onClick="submitPicture"
+        android:text="@string/button_submit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
