--- a/app/src/main/res/layout/activity_display_custom_camera2.xml
+++ b/app/src/main/res/layout/activity_display_custom_camera2.xml
@@ -10,6 +10,7 @@
         android:id="@+id/container_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorBlack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
