--- a/app/src/main/res/layout/fragment_custom_camera2.xml
+++ b/app/src/main/res/layout/fragment_custom_camera2.xml
@@ -25,36 +25,42 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <ImageButton
             android:id="@+id/snapshot_button2"
-            android:layout_width="match_parent"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/button_image_capture" />
+            android:scaleType="fitCenter"
+            android:src="@android:drawable/ic_menu_camera" />
 
-        <Button
+        <ImageButton
             android:id="@+id/video_button2"
-            android:layout_width="match_parent"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/button_video_capture" />
+            android:scaleType="fitCenter"
+            android:src="@android:drawable/presence_video_online" />
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/cancel_button"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="@android:string/cancel"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        android:src="@android:drawable/btn_dialog"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/ok_button"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="1dp"
-        android:text="@string/button_submit"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        android:src="@android:drawable/checkbox_on_background"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
